--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,8 +42,11 @@
     ]
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "html-react-parser": "^5.1.10",
+    "js-cookie": "^3.0.5",
     "react-bootstrap": "^2.10.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   }
 }
